# TelegramBot

./: Cargo.toml
src/: main.rs
src/parse/: mod.rs  parsing.rs
src/parse/models/: mod.rs  ticket.rs  train.rs
src/sqlite/: db_tools.rs  mod.rs
src/sqlite/models/: user.rs
src/tg_tools/: handlers.rs
src/tg_tools/models/: user.rs
